--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -359,6 +359,9 @@
     <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Cannon\CannonBase">
       <UniqueIdentifier>{5e6d3a75-19f0-4a57-9afd-0310d89f0e71}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\StageField\Final Stage">
+      <UniqueIdentifier>{ab18269c-e776-441b-8e3b-6aac8a98dccd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -1188,6 +1191,12 @@
     </ClCompile>
     <ClCompile Include="src\Game\CCannonBase.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Cannon\CannonBase</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CFinalStageField.cpp">
+      <Filter>ソース ファイル\Game\Field\StageField\Final Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CFinalStageFallCol.cpp">
+      <Filter>ソース ファイル\Game\Field\StageField\Final Stage</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2042,6 +2051,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CCannonBase.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Cannon\CannonBase</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CFinalStageField.h">
+      <Filter>ソース ファイル\Game\Field\StageField\Final Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CFinalStageFallCol.h">
+      <Filter>ソース ファイル\Game\Field\StageField\Final Stage</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
