--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -238,6 +238,7 @@
     <ClCompile Include="src\Game\CTreasureChest.cpp" />
     <ClCompile Include="src\Game\CTreasureChestUI.cpp" />
     <ClCompile Include="src\Game\CTree1.cpp" />
+    <ClCompile Include="src\Game\CTutorialUI.cpp" />
     <ClCompile Include="src\Game\CVanguard.cpp" />
     <ClCompile Include="src\Game\CVanguardGauge.cpp" />
     <ClCompile Include="src\Game\CWeaponEnemy.cpp" />
@@ -526,6 +527,7 @@
     <ClInclude Include="src\Game\CTreasureChest.h" />
     <ClInclude Include="src\Game\CTreasureChestUI.h" />
     <ClInclude Include="src\Game\CTree1.h" />
+    <ClInclude Include="src\Game\CTutorialUI.h" />
     <ClInclude Include="src\Game\CVanguard.h" />
     <ClInclude Include="src\Game\CVanguardGauge.h" />
     <ClInclude Include="src\Game\CWeaponEnemy.h" />
