--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -83,9 +83,6 @@
     <Filter Include="ソース ファイル\Game\Character\CharaObject\ItemObject">
       <UniqueIdentifier>{dc46f484-423a-4ed6-b568-80985fcc2bcd}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\Game\Character\Count">
-      <UniqueIdentifier>{4cc6ce07-bb8a-446e-abf7-467f09ea938b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ソース ファイル\Game\UI\PlayerUI">
       <UniqueIdentifier>{7162809b-e06e-4d22-91bf-02cf1bc08ac2}</UniqueIdentifier>
     </Filter>
@@ -371,6 +368,12 @@
     <Filter Include="ソース ファイル\Game\Character\CharaObject\WeaponObject">
       <UniqueIdentifier>{4d53c172-45bb-4272-8da3-2adcbf27f083}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Character\Manager">
+      <UniqueIdentifier>{4cc6ce07-bb8a-446e-abf7-467f09ea938b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Game\UI\RockOn">
+      <UniqueIdentifier>{1cb630be-9458-4ae7-8cce-bbc93c867453}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -593,7 +596,7 @@
       <Filter>ソース ファイル\Game\UI\Menu</Filter>
     </ClCompile>
     <ClCompile Include="src\Game\CEnemyManager.cpp">
-      <Filter>ソース ファイル\Game\Character\Count</Filter>
+      <Filter>ソース ファイル\Game\Character\Manager</Filter>
     </ClCompile>
     <ClCompile Include="src\Game\CStaminaGauge.cpp">
       <Filter>ソース ファイル\Game\UI\PlayerUI</Filter>
@@ -1210,6 +1213,9 @@
     <ClCompile Include="src\Game\CWeaponEnemy.cpp">
       <Filter>ソース ファイル\Game\Character\CharaObject\WeaponObject</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game\CRockOnUI.cpp">
+      <Filter>ソース ファイル\Game\UI\RockOn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CCollider.h">
@@ -1456,7 +1462,7 @@
       <Filter>ソース ファイル\Game\UI\Menu</Filter>
     </ClInclude>
     <ClInclude Include="src\Game\CEnemyManager.h">
-      <Filter>ソース ファイル\Game\Character\Count</Filter>
+      <Filter>ソース ファイル\Game\Character\Manager</Filter>
     </ClInclude>
     <ClInclude Include="src\Game\CStaminaGauge.h">
       <Filter>ソース ファイル\Game\UI\PlayerUI</Filter>
@@ -2072,6 +2078,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\CWeaponEnemy.h">
       <Filter>ソース ファイル\Game\Character\CharaObject\WeaponObject</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CRockOnUI.h">
+      <Filter>ソース ファイル\Game\UI\RockOn</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
