--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="src\Game\CCannon.cpp" />
     <ClCompile Include="src\Game\CCannonBall.cpp" />
     <ClCompile Include="src\Game\CCannonBase.cpp" />
+    <ClCompile Include="src\Game\CCanRockOn.cpp" />
     <ClCompile Include="src\Game\CCircleLine.cpp" />
     <ClCompile Include="src\Game\CCircleNbFl1.cpp" />
     <ClCompile Include="src\Game\CCircleNbFl2.cpp" />
@@ -374,6 +375,7 @@
     <ClInclude Include="src\Game\CCannon.h" />
     <ClInclude Include="src\Game\CCannonBall.h" />
     <ClInclude Include="src\Game\CCannonBase.h" />
+    <ClInclude Include="src\Game\CCanLockOn.h" />
     <ClInclude Include="src\Game\CCircleLine.h" />
     <ClInclude Include="src\Game\CCircleNbFl1.h" />
     <ClInclude Include="src\Game\CCircleNbFl2.h" />
