敵にロックオンをできるように実装(いったん終了)

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -1219,6 +1219,9 @@
     <ClCompile Include="src\Game\CCanRockOn.cpp">
       <Filter>ソース ファイル\Game\UI\RockOn</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game\CLockOn.cpp">
+      <Filter>ソース ファイル\Game\UI\RockOn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CCollider.h">
@@ -2086,6 +2089,9 @@
       <Filter>ソース ファイル\Game\UI\RockOn</Filter>
     </ClInclude>
     <ClInclude Include="src\Game\CCanLockOn.h">
+      <Filter>ソース ファイル\Game\UI\RockOn</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CLockOn.h">
       <Filter>ソース ファイル\Game\UI\RockOn</Filter>
     </ClInclude>
   </ItemGroup>
