--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="src\Game\CJumpingKinokoHigh.cpp" />
     <ClCompile Include="src\Game\CJumpingKinokoMove.cpp" />
     <ClCompile Include="src\Game\CJumpingKinokoMoveTo.cpp" />
+    <ClCompile Include="src\Game\CLockOn.cpp" />
     <ClCompile Include="src\Game\CMoveToNbFl1.cpp" />
     <ClCompile Include="src\Game\CMoveToNbFl2.cpp" />
     <ClCompile Include="src\Game\CMoveToNbFl3.cpp" />
@@ -410,6 +411,7 @@
     <ClInclude Include="src\Game\CJumpingKinokoHigh.h" />
     <ClInclude Include="src\Game\CJumpingKinokoMove.h" />
     <ClInclude Include="src\Game\CJumpingKinokoMoveTo.h" />
+    <ClInclude Include="src\Game\CLockOn.h" />
     <ClInclude Include="src\Game\CMoveToNbFl1.h" />
     <ClInclude Include="src\Game\CMoveToNbFl2.h" />
     <ClInclude Include="src\Game\CMoveToNbFl3.h" />
